# ad_robot_keitaro

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
migrations/: env.py
migrations/versions/: 0001_initial.py
src/: __init__.py  database.py  main.py  settings.py
src/api/: admin_pages.py  campaign_pages.py  campaign_presenters.py  dependencies.py  dictionary_pages.py  forms.py  page_utils.py  pages.py
src/campaigns/: __init__.py  dto.py  enums.py  exceptions.py  mappers.py  models.py  protocols.py  repositories.py  services.py  snapshots.py  usecases.py
src/dictionaries/: __init__.py  dto.py  mappers.py  models.py  protocols.py  repositories.py  snapshots.py  usecases.py
src/keitaro/: __init__.py  client.py  mappers.py  payloads.py  protocols.py  schemas.py
src/shared/: __init__.py  exceptions.py
static/: app.css
templates/: admin_index.html  base.html  campaigns_create.html  campaigns_editor.html  campaigns_list.html  dictionaries.html
tests/: fakes.py
tests/integration/: conftest.py  page_helpers.py  test_admin_pages.py  test_app_health.py  test_batch_update_endpoint.py  test_campaign_create_pages.py  test_campaign_editor_pages.py  test_campaign_repository.py  test_database_schema.py  test_dictionary_pages.py  test_dictionary_repository.py  test_offer_search_endpoint.py
tests/unit/: test_api_forms.py  test_campaign_usecases.py  test_dictionary_usecases.py  test_dto_contracts.py  test_fake_keitaro_client.py  test_keitaro_client_mapping.py
